--- a/component-oss-starter/pom.xml
+++ b/component-oss-starter/pom.xml
@@ -59,17 +59,15 @@
 
     <distributionManagement>
         <repository>
-            <id>releases</id>
-            <name>NexusReleases</name>
-<!--            <url>http://106.12.154.67:8081/repository/maven-releases/</url>-->
-            <url>http://nexus.injoy.einno.com/repository/maven-releases/</url>
+            <id>rdc-releases</id>
+            <name>rdc-releases</name>
+            <url>https://packages.aliyun.com/maven/repository/2140311-release-dkiMKF/</url>
         </repository>
 
         <snapshotRepository>
-            <id>snapshots</id>
-            <name>snapshots</name>
-<!--            <url>http://106.12.154.67:8081/repository/maven-snapshots/</url>-->
-            <url>http://nexus.injoy.einno.com/repository/maven-snapshots/</url>
+            <id>rdc-snapshots</id>
+            <name>rdc-snapshots</name>
+            <url>https://packages.aliyun.com/maven/repository/2140311-snapshot-6FUrDY/</url>
         </snapshotRepository>
     </distributionManagement>
 
